--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@types/webpack": "^4.39.1",
     "@types/webpack-env": "^1.14.0",
     "prettier": "^1.18.2",
-    "typescript": "^3.6.2"
+    "react-refresh": "^0.4.2",
+    "typescript": "3.6.3",
+    "webpack": "^4.40.0"
   },
-  "dependencies": {
-    "react-refresh": "^0.4.1",
-    "webpack": "^4.39.3"
+  "peerDependencies": {
+    "react-refresh": "*"
   }
 }
