--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "react-refresh": "*"
   },
   "engines": {
-    "node": "8.x || 9.x || 10.x || 11.x || 12.x"
+    "node": "8.x || 9.x || 10.x || 11.x || 12.x || 13.x"
   }
 }
