--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint:fix": "prettier --write \"**/*.{js,jsx}\""
   },
   "dependencies": {
+    "ansi-html": "^0.0.7",
+    "error-stack-parser": "^2.0.4",
+    "html-entities": "^1.2.1",
     "react-dev-utils": "^9.0.3",
-    "react-error-overlay": "^6.0.1",
     "sockjs-client": "^1.4.0",
     "strip-ansi": "^5.2.0"
   },
