--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   "devDependencies": {
     "prettier": "^1.18.2",
-    "react-refresh": "^0.6.0",
+    "react-refresh": "^0.7.0",
     "webpack": "^4.41.2"
   },
   "peerDependencies": {
     "react-refresh": "*"
   },
   "engines": {
-    "node": "8.x || 9.x || 10.x || 11.x || 12.x || 13.x"
+    "node": ">= 8.x"
   }
 }
