--- a/examples/wds-kitchen-sink/package.json
+++ b/examples/wds-kitchen-sink/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example",
+  "name": "wds-kitchen-sink",
   "version": "0.1.0",
   "main": "index.js",
   "author": "Michael Mok",
@@ -16,6 +16,7 @@
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.1.0",
     "babel-loader": "^8.0.6",
     "cross-env": "^6.0.3",
     "html-webpack-plugin": "^3.2.0",
