--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
     "src"
   ],
   "scripts": {
-    "lint": "prettier --check \"**/*.{js,jsx,json,md}\"",
-    "lint:fix": "prettier --write \"**/*.{js,jsx,json,md}\""
+    "lint": "yarn run lint:eslint && yarn run lint:prettier",
+    "lint:fix": "yarn run lint:eslint:fix && yarn run lint:prettier:fix",
+    "lint:eslint": "eslint --report-unused-disable-directives \"**/*.js\"",
+    "lint:eslint:fix": "yarn run lint:eslint --fix",
+    "lint:prettier": "prettier --check \"**/*.{js,jsx,json,md}\"",
+    "lint:prettier:fix": "prettier --write \"**/*.{js,jsx,json,md}\""
   },
   "dependencies": {
     "ansi-html": "^0.0.7",
