--- a/examples/wds-kitchen-sink/package.json
+++ b/examples/wds-kitchen-sink/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "author": "Michael Mok",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "start": "webpack-dev-server --hot --mode development",
     "build": "cross-env NODE_ENV=production webpack --mode production"
