--- a/examples/whm-kitchen-sink/package.json
+++ b/examples/whm-kitchen-sink/package.json
@@ -21,7 +21,7 @@
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
     "react-refresh": "^0.7.0",
-    "react-refresh-webpack-plugin": "https://github.com/pmmmwh/react-refresh-webpack-plugin#master",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.1.1",
     "webpack": "^4.41.2",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0"
