--- a/examples/cra-kitchen-sink/package.json
+++ b/examples/cra-kitchen-sink/package.json
@@ -1,6 +1,8 @@
 {
   "name": "cra-kitchen-sink",
   "version": "0.1.0",
+  "author": "Michael Mok",
+  "license": "MIT",
   "private": true,
   "dependencies": {
     "react": "^16.12.0",
