--- a/package.json
+++ b/package.json
@@ -31,17 +31,16 @@
   ],
   "scripts": {
     "lint": "eslint --report-unused-disable-directives \"**/*.js\"",
-    "lint:fix": "yarn run lint:eslint --fix",
+    "lint:fix": "yarn lint --fix",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "format:heck": "prettier --check \"**/*.{js,jsx,json,md}\""
+    "format:check": "prettier --check \"**/*.{js,jsx,json,md}\""
   },
   "dependencies": {
     "ansi-html": "^0.0.7",
     "error-stack-parser": "^2.0.4",
     "html-entities": "^1.2.1",
     "lodash.debounce": "^4.0.8",
-    "react-dev-utils": "^9.1.0",
-    "sockjs-client": "^1.4.0"
+    "react-dev-utils": "^9.1.0"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
@@ -53,9 +52,13 @@
   },
   "peerDependencies": {
     "react-refresh": ">= 0.7",
+    "sockjs-client": "^1.4.0",
     "webpack-hot-middleware": "^2.25.0"
   },
   "peerDependenciesMeta": {
+    "sockjs-client": {
+      "optional": true
+    },
     "webpack-hot-middleware": {
       "optional": true
     }
