--- a/examples/ts-without-babel/tsconfig.json
+++ b/examples/ts-without-babel/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "target": "es2018",
+    "target": "es6",
     "module": "esNext",
     "moduleResolution": "node",
-    "lib": ["dom", "es2015", "es2016", "es2017", "es2018", "es2019", "esnext"],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "sourceMap": true,
     "jsx": "react",
-    "baseUrl": ".",
   },
   "include": ["src"]
 }
