--- a/examples/whm-kitchen-sink/package.json
+++ b/examples/whm-kitchen-sink/package.json
@@ -5,25 +5,25 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
-    "@babel/preset-react": "^7.0.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.1.1",
-    "babel-loader": "^8.0.6",
-    "cross-env": "^6.0.3",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.2.0",
+    "babel-loader": "^8.1.0",
+    "cross-env": "^7.0.2",
     "express": "^4.17.1",
-    "html-webpack-plugin": "^3.2.0",
-    "react-refresh": "^0.7.0",
-    "webpack": "^4.41.3",
+    "html-webpack-plugin": "^4.0.2",
+    "react-refresh": "^0.8.1",
+    "webpack": "^4.42.1",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0"
   },
   "scripts": {
-    "start": "node ./server",
+    "start": "node ./server.js",
     "build": "cross-env NODE_ENV=production webpack --mode production"
   }
 }
