chore: update prettier config to v2 and format files

--- a/examples/ts-without-babel/tsconfig.json
+++ b/examples/ts-without-babel/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "node",
     "lib": ["dom", "dom.iterable", "esnext"],
     "sourceMap": true,
-    "jsx": "react",
+    "jsx": "react"
   },
   "include": ["src"]
 }
