--- a/examples/whm-kitchen-sink/package.json
+++ b/examples/whm-kitchen-sink/package.json
@@ -22,6 +22,6 @@
   },
   "scripts": {
     "start": "node ./server.js",
-    "build": "cross-env NODE_ENV=production webpack --mode production"
+    "build": "cross-env NODE_ENV=production webpack"
   }
 }
