--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   "scripts": {
     "lint": "eslint --report-unused-disable-directives \"**/*.js\"",
     "lint:fix": "yarn lint --fix",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "format:check": "prettier --check \"**/*.{js,jsx,json,md}\""
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {
     "ansi-html": "^0.0.7",
