--- a/examples/create-react-app/package.json
+++ b/examples/create-react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cra-kitchen-sink",
+  "name": "using-create-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
