--- a/examples/webpack-hot-middleware/package.json
+++ b/examples/webpack-hot-middleware/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-without-babel",
+  "name": "using-webpack-hot-middleware",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,21 +8,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.2.0",
-    "@types/react": "^16.9.26",
-    "@types/react-dom": "^16.9.5",
-    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^4.0.2",
     "react-refresh": "^0.8.1",
-    "typescript": "^3.8.3",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --hot",
+    "start": "node ./server.js",
     "build": "cross-env NODE_ENV=production webpack"
   }
 }
