--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "ansi-html": "^0.0.7",
     "error-stack-parser": "^2.0.6",
     "html-entities": "^1.2.1",
-    "lodash.debounce": "^4.0.8",
-    "react-dev-utils": "^9.1.0"
+    "lodash.debounce": "^4.0.8"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
