--- a/examples/create-react-app/package.json
+++ b/examples/create-react-app/package.json
@@ -7,10 +7,11 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.2.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.3.0-beta.2",
+    "@testing-library/dom": "^7.2.1",
     "@testing-library/jest-dom": "^5.3.0",
-    "@testing-library/react": "^10.0.1",
-    "@testing-library/user-event": "^10.0.0",
+    "@testing-library/react": "^10.0.2",
+    "@testing-library/user-event": "^10.0.1",
     "babel-loader": "^8.1.0",
     "customize-cra": "^0.9.1",
     "react-app-rewired": "^2.1.5",
