--- a/examples/typescript-without-babel/package.json
+++ b/examples/typescript-without-babel/package.json
@@ -8,13 +8,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.2.0",
-    "@types/react": "^16.9.26",
-    "@types/react-dom": "^16.9.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.3.0-beta.2",
+    "@types/react": "^16.9.32",
+    "@types/react-dom": "^16.9.6",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
-    "html-webpack-plugin": "^4.0.2",
+    "html-webpack-plugin": "^4.0.4",
     "react-refresh": "^0.8.1",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
