--- a/examples/webpack-hot-middleware/package.json
+++ b/examples/webpack-hot-middleware/package.json
@@ -8,9 +8,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.2.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.3.0-beta.2",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
