fix: add path to types to package.json

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "author": "Michael Mok",
   "main": "src/index.js",
+  "types": "types/index.d.ts",
   "files": [
     "src",
     "types"
