--- a/examples/typescript-without-babel/package.json
+++ b/examples/typescript-without-babel/package.json
@@ -7,19 +7,19 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.3.0-beta.5",
-    "@types/react": "^16.9.32",
-    "@types/react-dom": "^16.9.6",
+    "@babel/core": "^7.9.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.3.0",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
-    "html-webpack-plugin": "^4.0.4",
-    "react-refresh": "^0.8.1",
+    "html-webpack-plugin": "^4.3.0",
+    "react-refresh": "^0.8.2",
     "typescript": "^3.8.3",
-    "webpack": "^4.42.1",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "start": "webpack-dev-server --hot",
