--- a/examples/webpack-hot-middleware/package.json
+++ b/examples/webpack-hot-middleware/package.json
@@ -7,16 +7,16 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.3.0-beta.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.3.0",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
-    "html-webpack-plugin": "^4.0.2",
-    "react-refresh": "^0.8.1",
-    "webpack": "^4.42.1",
+    "html-webpack-plugin": "^4.3.0",
+    "react-refresh": "^0.8.2",
+    "webpack": "^4.43.0",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0"
   },
