chore: update eslint to include jest for test files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,9 @@
   },
   "env": {
     "browser": true,
+    "commonjs": true,
     "es6": true,
     "node": true
-  }
+  },
+  "overrides": [{ "files": ["test/**/*.test.js"], "env": { "jest": true } }]
 }
