--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "types"
   ],
   "scripts": {
+    "test": "jest --forceExit",
     "lint": "eslint --report-unused-disable-directives --ext .js .",
     "lint:fix": "yarn lint --fix",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
@@ -48,17 +49,27 @@
     "schema-utils": "^2.6.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
     "@types/json-schema": "^7.0.4",
     "@types/node": "^13.11.1",
     "@types/webpack": "^4.41.11",
+    "babel-loader": "^8.1.0",
+    "cross-spawn": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
+    "fs-extra": "^9.0.0",
+    "get-port": "^5.1.1",
+    "jest": "^26.0.1",
+    "jest-watch-typeahead": "^0.6.0",
+    "nanoid": "^3.1.7",
     "prettier": "^2.0.4",
+    "puppeteer": "^3.0.4",
     "react-refresh": "^0.8.1",
     "rimraf": "^3.0.2",
     "type-fest": "^0.13.1",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-plugin-serve": "^1.0.0"
