--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "fs-extra": "^9.0.0",
     "get-port": "^5.1.1",
     "jest": "^26.0.1",
+    "jest-environment-node": "^26.0.1",
     "jest-watch-typeahead": "^0.6.0",
     "nanoid": "^3.1.7",
     "prettier": "^2.0.4",
