--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "generate-types": "tsc -p tsconfig.json && rimraf \"types/{helpers,runtime}\" && yarn format",
+    "postinstall": "yarn link && yarn link \"@pmmmwh/react-refresh-webpack-plugin\"",
     "prepublishOnly": "rimraf types && yarn generate-types"
   },
   "dependencies": {
@@ -63,6 +64,7 @@
     "jest-environment-node": "^26.0.1",
     "jest-watch-typeahead": "^0.6.0",
     "nanoid": "^3.1.7",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.0.4",
     "puppeteer": "^3.0.4",
     "react-refresh": "^0.8.1",
