--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "types"
   ],
   "scripts": {
-    "test": "jest",
+    "test": "node scripts/test.js",
     "lint": "eslint --report-unused-disable-directives --ext .js .",
     "lint:fix": "yarn lint --fix",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
@@ -75,7 +75,8 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-plugin-serve": "^1.0.0"
+    "webpack-plugin-serve": "^1.0.0",
+    "yn": "^4.0.0"
   },
   "peerDependencies": {
     "@types/webpack": "^4.41.12",
