--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/core": "^7.9.6",
     "@types/json-schema": "^7.0.4",
     "@types/node": "^13.11.1",
+    "@types/puppeteer": "^2.1.0",
     "@types/webpack": "^4.41.11",
     "babel-loader": "^8.1.0",
     "cross-spawn": "^7.0.2",
