--- a/examples/create-react-app/package.json
+++ b/examples/create-react-app/package.json
@@ -7,15 +7,15 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.3.1",
-    "@testing-library/dom": "^7.5.1",
-    "@testing-library/jest-dom": "^5.7.0",
-    "@testing-library/react": "^10.0.4",
-    "@testing-library/user-event": "^10.1.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.0-beta.4",
+    "@testing-library/dom": "^7.10.1",
+    "@testing-library/jest-dom": "^5.9.0",
+    "@testing-library/react": "^10.2.1",
+    "@testing-library/user-event": "^11.2.1",
     "babel-loader": "^8.1.0",
-    "customize-cra": "^0.9.1",
+    "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.1.6",
-    "react-refresh": "^0.8.2",
+    "react-refresh": "^0.8.3",
     "react-scripts": "3.4.1"
   },
   "scripts": {
