--- a/examples/typescript-without-babel/package.json
+++ b/examples/typescript-without-babel/package.json
@@ -7,16 +7,16 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.3.1",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
+    "@babel/core": "^7.10.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.0-beta.4",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "html-webpack-plugin": "^4.3.0",
-    "react-refresh": "^0.8.2",
-    "typescript": "^3.8.3",
+    "react-refresh": "^0.8.3",
+    "typescript": "3.9.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
