--- a/examples/webpack-plugin-serve/package.json
+++ b/examples/webpack-plugin-serve/package.json
@@ -7,17 +7,17 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.3.1",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.0-beta.4",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "html-webpack-plugin": "^4.3.0",
-    "react-refresh": "^0.8.2",
+    "react-refresh": "^0.8.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-plugin-serve": "^1.0.0"
+    "webpack-plugin-serve": "^1.0.1"
   },
   "scripts": {
     "start": "webpack --watch",
