--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,7 @@ jobs:
       setup:
         default: []
         type: steps
+    parallelism: 4
     steps:
       - checkout
       - setup-headless-chromium
@@ -59,8 +60,16 @@ jobs:
           with-cache: false
       - run:
           name: Run Tests
-          command: yarn test
+          command: |
+            TESTFILES=$(circleci tests glob "test/**/*.test.js" | circleci tests split --split-by=timings)
+            yarn test $TESTFILES
+          environment:
+            JEST_JUNIT_OUTPUT_DIR: test-results/jest
           working_directory: ~/project
+      - store_test_results:
+          path: test-results
+      - store_artifacts:
+          path: test-results
 
 workflows:
   test-matrix:
