--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "jest": "^26.0.1",
     "jest-circus": "^26.0.1",
     "jest-environment-node": "^26.0.1",
+    "jest-junit": "^11.0.0",
     "jest-watch-typeahead": "^0.6.0",
     "nanoid": "^3.1.7",
     "postinstall-postinstall": "^2.1.0",
