--- a/package.json
+++ b/package.json
@@ -56,42 +56,41 @@
     "source-map": "^0.7.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@types/json-schema": "^7.0.4",
-    "@types/node": "^14.0.1",
-    "@types/puppeteer": "^2.1.0",
+    "@babel/core": "^7.10.3",
+    "@types/json-schema": "^7.0.5",
+    "@types/node": "^14.0.14",
+    "@types/puppeteer": "^3.0.0",
     "@types/webpack": "^4.41.17",
     "@webpack-cli/serve": "^1.0.1-alpha.5",
     "babel-loader": "^8.1.0",
-    "cross-spawn": "^7.0.2",
-    "eslint": "^7.0.0",
+    "cross-spawn": "^7.0.3",
+    "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "fs-extra": "^9.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "fs-extra": "^9.0.1",
     "get-port": "^5.1.1",
-    "jest": "^26.0.1",
-    "jest-circus": "^26.0.1",
-    "jest-environment-node": "^26.0.1",
-    "jest-junit": "^11.0.0",
+    "jest": "^26.1.0",
+    "jest-circus": "^26.1.0",
+    "jest-environment-node": "^26.1.0",
+    "jest-junit": "^11.0.1",
     "jest-watch-typeahead": "^0.6.0",
-    "nanoid": "^3.1.7",
-    "postinstall-postinstall": "^2.1.0",
+    "nanoid": "^3.1.10",
     "prettier": "^2.0.5",
-    "puppeteer": "^3.0.4",
-    "react-refresh": "^0.8.2",
+    "puppeteer": "^3.3.0",
+    "react-refresh": "^0.8.3",
     "rimraf": "^3.0.2",
-    "type-fest": "^0.13.1",
-    "typescript": "^3.8.3",
-    "webpack": "^5.0.0-beta.18",
-    "webpack-cli": "^4.0.0-beta.8",
+    "type-fest": "^0.15.1",
+    "typescript": "^3.9.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-plugin-serve": "^1.0.0",
+    "webpack-plugin-serve": "^1.0.1",
     "yn": "^4.0.0"
   },
   "peerDependencies": {
     "@types/webpack": "^4.41.17",
-    "react-refresh": "^0.8.2",
+    "react-refresh": "^0.8.3",
     "sockjs-client": "^1.4.0",
     "type-fest": "^0.13.1",
     "webpack": ">=4.43.0 <6.0.0",
