--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "types"
   ],
   "scripts": {
-    "pretest": "yarn link && yarn link \"@pmmmwh/react-refresh-webpack-plugin\"",
+    "pretest": "patch-package && yarn link && yarn link \"@pmmmwh/react-refresh-webpack-plugin\"",
     "posttest": "yarn unlink \"@pmmmwh/react-refresh-webpack-plugin\"",
     "test": "node scripts/test.js",
     "lint": "eslint --report-unused-disable-directives --ext .js .",
@@ -74,11 +74,14 @@
     "jest-environment-node": "^26.1.0",
     "jest-junit": "^11.0.1",
     "jest-watch-typeahead": "^0.6.0",
+    "memfs": "^3.2.0",
     "nanoid": "^3.1.10",
+    "patch-package": "^6.2.2",
     "prettier": "^2.0.5",
     "puppeteer": "^3.3.0",
     "react-refresh": "^0.8.3",
     "rimraf": "^3.0.2",
+    "sourcemap-validator": "^2.1.0",
     "type-fest": "^0.15.1",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
