--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pretest": "patch-package && yarn link && yarn link \"@pmmmwh/react-refresh-webpack-plugin\"",
     "posttest": "yarn unlink \"@pmmmwh/react-refresh-webpack-plugin\"",
     "test": "node scripts/test.js",
+    "test:webpack-5": "WEBPACK_VERSION=5 yarn test",
     "lint": "eslint --report-unused-disable-directives --ext .js .",
     "lint:fix": "yarn lint --fix",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
@@ -85,7 +86,9 @@
     "type-fest": "^0.15.1",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
+    "webpack:next": "npm:webpack@^5.0.0-beta.21",
     "webpack-cli": "^3.3.12",
+    "webpack-cli:beta": "npm:webpack-cli@^4.0.0-beta.8",
     "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-plugin-serve": "^1.0.1",
