chore: make webpack 5 package aliases url-safe

--- a/package.json
+++ b/package.json
@@ -86,9 +86,9 @@
     "type-fest": "^0.15.1",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
-    "webpack:next": "npm:webpack@^5.0.0-beta.21",
+    "webpack.next": "npm:webpack@^5.0.0-beta.21",
     "webpack-cli": "^3.3.12",
-    "webpack-cli:beta": "npm:webpack-cli@^4.0.0-beta.8",
+    "webpack-cli.beta": "npm:webpack-cli@^4.0.0-beta.8",
     "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-plugin-serve": "^1.0.1",
