--- a/package.json
+++ b/package.json
@@ -57,15 +57,15 @@
     "source-map": "^0.7.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.3",
+    "@babel/core": "^7.10.5",
     "@types/json-schema": "^7.0.5",
-    "@types/node": "^14.0.14",
-    "@types/puppeteer": "^3.0.0",
-    "@types/webpack": "^4.41.17",
+    "@types/node": "^14.0.24",
+    "@types/puppeteer": "^3.0.1",
+    "@types/webpack": "^4.41.21",
     "@webpack-cli/serve": "^1.0.1-alpha.5",
     "babel-loader": "^8.1.0",
     "cross-spawn": "^7.0.3",
-    "eslint": "^7.3.1",
+    "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "fs-extra": "^9.0.1",
@@ -79,14 +79,14 @@
     "nanoid": "^3.1.10",
     "patch-package": "^6.2.2",
     "prettier": "^2.0.5",
-    "puppeteer": "^3.3.0",
+    "puppeteer": "^5.2.1",
     "react-refresh": "^0.8.3",
     "rimraf": "^3.0.2",
     "sourcemap-validator": "^2.1.0",
-    "type-fest": "^0.15.1",
-    "typescript": "^3.9.5",
+    "type-fest": "^0.16.0",
+    "typescript": "3.9.7",
     "webpack": "^4.43.0",
-    "webpack.next": "npm:webpack@^5.0.0-beta.21",
+    "webpack.next": "npm:webpack@^5.0.0-beta.22",
     "webpack-cli": "^3.3.12",
     "webpack-cli.beta": "npm:webpack-cli@^4.0.0-beta.8",
     "webpack-dev-server": "^3.11.0",
@@ -95,7 +95,7 @@
     "yn": "^4.0.0"
   },
   "peerDependencies": {
-    "@types/webpack": "^4.41.17",
+    "@types/webpack": "4.x",
     "react-refresh": "^0.8.3",
     "sockjs-client": "^1.4.0",
     "type-fest": "^0.13.1",
