fix: pin webpack version for CRA example to make things compile (#162)

--- a/examples/create-react-app/package.json
+++ b/examples/create-react-app/package.json
@@ -16,7 +16,8 @@
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.1.6",
     "react-refresh": "^0.8.3",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "webpack": "^4.43.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
