--- a/examples/create-react-app/package.json
+++ b/examples/create-react-app/package.json
@@ -7,7 +7,7 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.0-beta.8",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.0",
     "@testing-library/dom": "^7.21.4",
     "@testing-library/jest-dom": "^5.11.1",
     "@testing-library/react": "^10.4.7",
@@ -17,7 +17,7 @@
     "react-app-rewired": "^2.1.6",
     "react-refresh": "^0.8.3",
     "react-scripts": "3.4.1",
-    "webpack": "^4.43.0"
+    "webpack": "^4.44.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
