--- a/examples/flow-with-babel/package.json
+++ b/examples/flow-with-babel/package.json
@@ -11,13 +11,13 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-flow": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.0-beta.8",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.0",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "flow-bin": "^0.129.0",
     "html-webpack-plugin": "^4.3.0",
     "react-refresh": "^0.8.3",
-    "webpack": "^4.43.0",
+    "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
