--- a/examples/typescript-without-babel/package.json
+++ b/examples/typescript-without-babel/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.0-beta.8",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.0",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "awesome-typescript-loader": "^5.2.1",
@@ -17,7 +17,7 @@
     "html-webpack-plugin": "^4.3.0",
     "react-refresh": "^0.8.3",
     "typescript": "3.9.7",
-    "webpack": "^4.43.0",
+    "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
