--- a/examples/webpack-hot-middleware/package.json
+++ b/examples/webpack-hot-middleware/package.json
@@ -10,13 +10,13 @@
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.0-beta.8",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.0",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "html-webpack-plugin": "^4.3.0",
     "react-refresh": "^0.8.3",
-    "webpack": "^4.43.0",
+    "webpack": "^4.44.0",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0"
   },
