--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "types"
   ],
   "scripts": {
-    "pretest": "patch-package && yarn link && yarn link \"@pmmmwh/react-refresh-webpack-plugin\"",
+    "pretest": "yarn link && yarn link \"@pmmmwh/react-refresh-webpack-plugin\"",
     "posttest": "yarn unlink \"@pmmmwh/react-refresh-webpack-plugin\"",
     "test": "node scripts/test.js",
     "test:webpack-5": "WEBPACK_VERSION=5 yarn test",
@@ -56,27 +56,26 @@
     "source-map": "^0.7.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
+    "@babel/core": "^7.11.0",
     "@types/json-schema": "^7.0.5",
-    "@types/node": "^14.0.26",
+    "@types/node": "^14.0.27",
     "@types/puppeteer": "^3.0.1",
     "@types/webpack": "^4.41.21",
     "@webpack-cli/serve": "^1.0.1-alpha.5",
     "babel-loader": "^8.1.0",
     "cross-spawn": "^7.0.3",
-    "eslint": "^7.5.0",
+    "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "fs-extra": "^9.0.1",
     "get-port": "^5.1.1",
-    "jest": "^26.1.0",
-    "jest-circus": "^26.1.0",
-    "jest-environment-node": "^26.1.0",
+    "jest": "^26.2.2",
+    "jest-circus": "^26.2.2",
+    "jest-environment-node": "^26.2.0",
     "jest-junit": "^11.1.0",
     "jest-watch-typeahead": "^0.6.0",
     "memfs": "^3.2.0",
-    "nanoid": "^3.1.11",
-    "patch-package": "^6.2.2",
+    "nanoid": "^3.1.12",
     "prettier": "^2.0.5",
     "puppeteer": "^5.2.1",
     "react-refresh": "^0.8.3",
@@ -84,7 +83,7 @@
     "sourcemap-validator": "^2.1.0",
     "type-fest": "^0.16.0",
     "typescript": "3.9.7",
-    "webpack": "^4.44.0",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-cli.beta": "npm:webpack-cli@^4.0.0-beta.8",
     "webpack-dev-server": "^3.11.0",
