chore(peer-deps): relax react-refresh to allow 0.9 (fixes #231)

--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
   },
   "peerDependencies": {
     "@types/webpack": "4.x",
-    "react-refresh": "^0.8.3",
+    "react-refresh": ">=0.8.3 <0.10.0",
     "sockjs-client": "^1.4.0",
     "type-fest": "^0.13.1",
     "webpack": ">=4.43.0 <6.0.0",
