--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "@types/node": "^14.11.1",
     "@types/puppeteer": "^3.0.2",
     "@types/webpack": "^4.41.22",
-    "@webpack-cli/serve": "^1.0.1-alpha.5",
     "babel-loader": "^8.1.0",
     "cross-spawn": "^7.0.3",
     "eslint": "^7.9.0",
@@ -75,6 +74,7 @@
     "jest-junit": "^11.1.0",
     "jest-watch-typeahead": "^0.6.1",
     "memfs": "^3.2.0",
+    "module-alias": "^2.2.2",
     "nanoid": "^3.1.12",
     "prettier": "^2.1.2",
     "puppeteer": "^5.3.0",
@@ -85,11 +85,11 @@
     "typescript": "4.0.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-cli.beta": "npm:webpack-cli@^4.0.0-beta.8",
+    "webpack-cli.latest": "npm:webpack-cli@^4.2.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-plugin-serve": "^1.0.1",
-    "webpack.next": "npm:webpack@^5.0.0-beta.23",
+    "webpack.latest": "npm:webpack@^5.4.0",
     "yn": "^4.0.0"
   },
   "peerDependencies": {
