--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "license": "MIT",
   "author": "Michael Mok",
   "main": "lib/index.js",
-  "types": "types/index.d.ts",
+  "types": "types/lib/index.d.ts",
   "files": [
     "client",
     "lib",
@@ -44,7 +44,8 @@
     "lint:fix": "yarn lint --fix",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "generate-types": "tsc -p tsconfig.json && rimraf \"types/{globals.*,runtime,utils}\" && yarn format",
+    "generate-types": "tsc -p tsconfig.json && yarn prune-private-types && yarn format --loglevel silent",
+    "prune-private-types": "del \"types/*/*\" \"!types/{lib,loader,options}/{index,types}.d.ts\"",
     "prepublishOnly": "rimraf types && yarn generate-types"
   },
   "dependencies": {
@@ -52,12 +53,14 @@
     "core-js-pure": "^3.8.1",
     "error-stack-parser": "^2.0.6",
     "html-entities": "^2.1.0",
+    "loader-utils": "^2.0.0",
     "native-url": "^0.3.4",
     "schema-utils": "^3.0.0",
     "source-map": "^0.7.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
+    "@babel/core": "^7.13.14",
+    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
     "@types/cross-spawn": "^6.0.2",
     "@types/fs-extra": "^9.0.4",
     "@types/jest": "^26.0.15",
@@ -66,8 +69,10 @@
     "@types/node": "^14.11.1",
     "@types/puppeteer": "^5.4.0",
     "@types/webpack": "^4.41.22",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.1.0",
     "cross-spawn": "^7.0.3",
+    "del-cli": "^3.0.1",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -84,17 +89,16 @@
     "prettier": "^2.1.2",
     "puppeteer": "^8.0.0",
     "react-refresh": "^0.9.0",
-    "rimraf": "^3.0.2",
     "sourcemap-validator": "^2.1.0",
     "type-fest": "^0.21.2",
     "typescript": "4.2.2",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-cli.latest": "npm:webpack-cli@^4.5.0",
+    "webpack-cli.latest": "npm:webpack-cli@4.x",
     "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-plugin-serve": "^1.0.1",
-    "webpack.latest": "npm:webpack@^5.24.2",
+    "webpack.latest": "npm:webpack@5.x",
     "yn": "^4.0.0"
   },
   "peerDependencies": {
