--- a/examples/typescript-without-babel/package.json
+++ b/examples/typescript-without-babel/package.json
@@ -3,26 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "cross-env": "^7.0.2",
-    "fork-ts-checker-webpack-plugin": "^6.0.6",
-    "html-webpack-plugin": "^4.4.1",
-    "react-refresh": "^0.9.0",
-    "react-refresh-typescript": "^1.1.0",
-    "ts-loader": "^8.0.4",
-    "typescript": "4.1.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
+    "@types/react": "^17.0.13",
+    "@types/react-dom": "^17.0.8",
+    "cross-env": "^7.0.3",
+    "fork-ts-checker-webpack-plugin": "^6.2.12",
+    "html-webpack-plugin": "^5.3.2",
+    "react-refresh": "^0.10.0",
+    "react-refresh-typescript": "^2.0.1",
+    "ts-loader": "^9.2.3",
+    "typescript": "4.3.5",
+    "webpack": "^5.42.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "start": "webpack-dev-server --hot",
+    "start": "webpack serve --hot",
     "build": "cross-env NODE_ENV=production webpack"
   }
 }
