--- a/examples/webpack-plugin-serve/package.json
+++ b/examples/webpack-plugin-serve/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "babel-loader": "^8.1.0",
-    "cross-env": "^7.0.2",
-    "html-webpack-plugin": "^4.4.1",
-    "react-refresh": "^0.9.0",
-    "webpack": "^4.44.2",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
+    "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "html-webpack-plugin": "^4.5.2",
+    "react-refresh": "^0.10.0",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-plugin-serve": "^1.0.1"
+    "webpack-plugin-serve": "^1.4.1"
   },
   "scripts": {
     "start": "webpack --watch",
